--- a/src/assets/sass/bootstrap-extended/_navbar.scss
+++ b/src/assets/sass/bootstrap-extended/_navbar.scss
@@ -313,6 +313,17 @@ nav.navbar.header-navbar {
 @include media-breakpoint-down(xs) {
   nav.navbar.header-navbar {
     padding: .3rem .5rem !important;
+    position: fixed;
+    width: 100%;
+    padding: 0.3rem 0.5rem !important;
+    border-bottom: 0.5px solid #f2f2f2 !important;
+    padding: 0.3rem 0.5rem !important;
+     transition: background-color .25s ease, box-shadow .25s ease;
+  }
+
+    nav.navbar.header-navbar.nav-scrolled {
+    background: #ffffff !important;
+    border-bottom: 0.5px solid #eaeaea !important;
   }
 }
 
