--- a/src/assets/sass/core/layouts/_sidebar-content.scss
+++ b/src/assets/sass/core/layouts/_sidebar-content.scss
@@ -653,6 +653,12 @@ body {
   }
 }
 
+@include media-breakpoint-up(xs) {
+    .main-panel {
+      margin-top: 54px !important;
+    }
+}
+
 @include media-breakpoint-up(xl) {
   .drag-target {
     z-index: 0;
